force-app/main/default/objects/BMCServiceDesk__SSLayoutDetail__c/BMCServiceDesk__SSLayoutDetail__c.object-meta.xml
<CustomObject>
    <label>Self Service Layout Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Self Service Layout Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>