force-app/main/default/objects/BMCServiceDesk__SSLayoutDetail__c/fields/BMCServiceDesk__AdvancedLogic__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AdvancedLogic__c</fullName>
    <label>Advanced Logic</label>
    <type>TextArea</type>
</CustomField>