force-app/main/default/objects/BMCServiceDesk__SSLayoutDetail__c/fields/BMCServiceDesk__FieldName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FieldName__c</fullName>
    <label>Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>