force-app/main/default/objects/BMCServiceDesk__SSLayoutDetail__c/fields/BMCServiceDesk__FieldType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FieldType__c</fullName>
    <label>Field Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>