force-app/main/default/objects/BMCServiceDesk__SSLayoutDetail__c/fields/BMCServiceDesk__LayoutId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__LayoutId__c</fullName>
    <label>Layout Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>