force-app/main/default/objects/BMCServiceDesk__SSLayoutDetail__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__LayoutId__c</columns>
    <columns>BMCServiceDesk__FieldName__c</columns>
    <columns>BMCServiceDesk__FieldType__c</columns>
    <columns>BMCServiceDesk__AdvancedLogic__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>